--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ attrs==21.4.0
 dj-database-url==0.5.0
 Django==4.0.5
 django-bootstrap-form==3.4
+django-cors-headers==3.13.0
 django-heroku==0.3.1
 django-on-heroku==1.1.2
 django-restframework==0.0.1
