--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,26 @@
-asgiref==3.5.2
-attrs==21.4.0
-boto3==1.24.19
-botocore==1.27.19
-certifi==2022.6.15
-charset-normalizer==2.0.12
-dj-database-url==0.5.0
-Django==4.0.5
+asgiref==3.9.1
+botocore==1.40.16
+certifi==2025.8.3
+charset-normalizer==3.4.3
+dj-database-url==3.0.1
+Django==5.2.5
 django-bootstrap-form==3.4
-django-cors-headers==3.13.0
-django-heroku==0.3.1
-django-on-heroku==1.1.2
-django-restframework==0.0.1
-django-storages==1.12.3
-djangorestframework==3.13.1
-dropbox==11.32.0
-gunicorn==20.1.0
-idna==3.3
+django-cors-headers==4.7.0
+djangorestframework==3.16.1
+idna==3.10
+Jinja2==3.1.6
 jmespath==1.0.1
-Pillow==9.1.1
+MarkupSafe==3.0.2
+packaging==25.0
+pillow==11.3.0
 ply==3.11
-psycopg2-binary==2.9.6
-python-dateutil==2.8.2
-pytz==2022.1
-requests==2.28.0
-s3transfer==0.6.0
-six==1.16.0
-sqlparse==0.4.2
-stone==3.3.1
-urllib3==1.26.9
-whitenoise==6.2.0
+psycopg2-binary==2.9.10
+python-dateutil==2.9.0.post0
+pytz==2025.2
+requests==2.32.5
+s3transfer==0.13.1
+six==1.17.0
+sqlparse==0.5.3
+stone==3.3.9
+urllib3==2.5.0
+whitenoise==6.9.0
