--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,14 @@ asgiref==3.9.1
 botocore==1.40.16
 certifi==2025.8.3
 charset-normalizer==3.4.3
+click==8.2.1
 dj-database-url==3.0.1
 Django==5.2.5
 django-bootstrap-form==3.4
 django-cors-headers==4.7.0
 djangorestframework==3.16.1
+gunicorn==23.0.0
+h11==0.16.0
 idna==3.10
 Jinja2==3.1.6
 jmespath==1.0.1
@@ -23,4 +26,5 @@ six==1.17.0
 sqlparse==0.5.3
 stone==3.3.9
 urllib3==2.5.0
+uvicorn==0.35.0
 whitenoise==6.9.0
