--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,24 @@
+annotated-types==0.7.0
+anyio==4.10.0
 asgiref==3.9.1
 botocore==1.40.16
 certifi==2025.8.3
 charset-normalizer==3.4.3
 click==8.2.1
+deprecation==2.1.0
 dj-database-url==3.0.1
 Django==5.2.5
 django-bootstrap-form==3.4
 django-cors-headers==4.7.0
+django-environ==0.12.0
 djangorestframework==3.16.1
 gunicorn==23.0.0
 h11==0.16.0
+h2==4.3.0
+hpack==4.1.0
+httpcore==1.0.9
+httpx==0.28.1
+hyperframe==6.1.0
 idna==3.10
 Jinja2==3.1.6
 jmespath==1.0.1
@@ -17,14 +26,29 @@ MarkupSafe==3.0.2
 packaging==25.0
 pillow==11.3.0
 ply==3.11
+postgrest==1.1.1
 psycopg2-binary==2.9.10
+pydantic==2.11.7
+pydantic_core==2.33.2
+PyJWT==2.10.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
 pytz==2025.2
+realtime==2.7.0
 requests==2.32.5
 s3transfer==0.13.1
 six==1.17.0
+sniffio==1.3.1
 sqlparse==0.5.3
 stone==3.3.9
+storage3==0.12.1
+StrEnum==0.4.15
+supabase==2.18.1
+supabase_auth==2.12.3
+supabase_functions==0.10.1
+typing-inspection==0.4.1
+typing_extensions==4.14.1
 urllib3==2.5.0
 uvicorn==0.35.0
+websockets==15.0.1
 whitenoise==6.9.0
