--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 annotated-types==0.7.0
 anyio==4.10.0
 asgiref==3.9.1
-botocore==1.40.16
+boto3==1.40.17
+botocore==1.40.17
 certifi==2025.8.3
 charset-normalizer==3.4.3
 click==8.2.1
@@ -11,6 +12,7 @@ Django==5.2.5
 django-bootstrap-form==3.4
 django-cors-headers==4.7.0
 django-environ==0.12.0
+django-storages==1.14.6
 djangorestframework==3.16.1
 gunicorn==23.0.0
 h11==0.16.0
