--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ deprecation==2.1.0
 dj-database-url==3.0.1
 Django==5.2.5
 django-bootstrap-form==3.4
+django-bootstrap5==25.2
 django-cors-headers==4.7.0
 django-environ==0.12.0
 django-storages==1.14.6
