--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,13 @@ anyio==4.10.0
 asgiref==3.9.1
 boto3==1.40.17
 botocore==1.40.17
+CacheControl==0.14.3
+cachetools==5.5.2
 certifi==2025.8.3
+cffi==1.17.1
 charset-normalizer==3.4.3
 click==8.2.1
+cryptography==45.0.6
 deprecation==2.1.0
 dj-database-url==3.0.1
 Django==5.2.5
@@ -15,6 +19,17 @@ django-cors-headers==4.7.0
 django-environ==0.12.0
 django-storages==1.14.6
 djangorestframework==3.16.1
+firebase_admin==7.1.0
+google-api-core==2.25.1
+google-auth==2.40.3
+google-cloud-core==2.4.3
+google-cloud-firestore==2.21.0
+google-cloud-storage==3.3.0
+google-crc32c==1.7.1
+google-resumable-media==2.7.2
+googleapis-common-protos==1.70.0
+grpcio==1.74.0
+grpcio-status==1.74.0
 gunicorn==23.0.0
 h11==0.16.0
 h2==4.3.0
@@ -26,11 +41,17 @@ idna==3.10
 Jinja2==3.1.6
 jmespath==1.0.1
 MarkupSafe==3.0.2
+msgpack==1.1.1
 packaging==25.0
 pillow==11.3.0
 ply==3.11
 postgrest==1.1.1
+proto-plus==1.26.1
+protobuf==6.32.0
 psycopg2-binary==2.9.10
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.22
 pydantic==2.11.7
 pydantic_core==2.33.2
 PyJWT==2.10.1
@@ -39,6 +60,7 @@ python-dotenv==1.1.1
 pytz==2025.2
 realtime==2.7.0
 requests==2.32.5
+rsa==4.9.1
 s3transfer==0.13.1
 six==1.17.0
 sniffio==1.3.1
